cluster/core/minio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-console
spec:
  hosts:
  - minio.${CLUSTER_DOMAIN}
  gateways:
  - system-ingress/gateway
  http:
  - route:
    - destination:
        host: minio-console.minio.svc.cluster.local
        port:
          number: 9001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-gateway
spec:
  hosts:
  - s3.${CLUSTER_DOMAIN}
  gateways:
  - system-ingress/gateway
  http:
  - route:
    - destination:
        host: minio.minio.svc.cluster.local
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: https://outline.${CLUSTER_DOMAIN}
      allowMethods:
      - GET
      - POST
      allowCredentials: false
      maxAge: "24h"
